--- a/css/style.css
+++ b/css/style.css
@@ -61,10 +61,6 @@ color:#6F00FE
 color:# #FF5733
 }
 
-.custom-toggler .navbar-toggler-icon {
-background-image:url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='#0f0' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E")
-}
-
 .custom-toggler.navbar-toggler {
 border-color:#0f0;
 margin:1px;
@@ -255,6 +251,7 @@ color:#2eca6a
 -webkit-backface-visibility:hidden;
 backface-visibility:hidden;
 background-color:#fff;
+box-shadow:1px 2px 2px rgba(100,100,100,0.3);
 transition:all .5s ease-in-out
 }
 
