--- a/css/mainstyles.css
+++ b/css/mainstyles.css
@@ -5,11 +5,11 @@
 .navbar-custom .navbar-nav .active>.nav-link,.navbar-custom .navbar-nav .nav-link.active,.navbar-custom .navbar-nav .nav-link.show,.navbar-custom .navbar-nav .show>.nav-link {background-color: #107896; color: #fff;}
 .navbar-custom .navbar-nav .nav-link {color: #fff;}
 .navbar-custom .navbar-nav .nav-link:focus,.navbar-custom .navbar-nav .nav-link:hover {color: #0f0 !important;}
-.dropdown-menu {background-color: #107896;border: #000 solid 1px;}
+.dropdown-menu {background-color: #C2571A;border: #000 solid 1px;}
 .dropdown-menu>li>a {clear: both; color: #fff; display: block; line-height: 1.42857143; white-space: nowrap;}
 .dropdown-menu>li>a:focus,.dropdown-menu>li>a:hover {background-color: transparent;color: #0f0;text-decoration: none;}
-.dropdown-menu>.active>a,.dropdown-menu>.active>a:focus,.dropdown-menu>.active>a:hover {background-color: #107896;color: #fff;outline: 0;text-decoration: none;}
-ul.dropdown-menu:hover {background-color: #107896;}
+.dropdown-menu>.active>a,.dropdown-menu>.active>a:focus,.dropdown-menu>.active>a:hover {background-color: #C2571A;color: #fff;outline: 0;text-decoration: none;}
+ul.dropdown-menu:hover {background-color: #C2571A;}
 .nav .open>a,.nav .open>a:focus,.nav .open>a:hover,.nav>li>a:focus,.nav>li>a:hover,.navbar-default .navbar-toggle .icon-bar {	background-color: transparent;}
 .navbar-header .navbar-toggle:focus,.navbar-header .navbar-toggle:hover {background-color: #009bff;}
 .dropdown-header-custom {color: #0f0;}
