--- a/css/mainstyles.css
+++ b/css/mainstyles.css
@@ -72,3 +72,21 @@ body,html {height: 100% !important;}
 .selectize-input {border: none;}
 .text-justify {text-align: justify;}
 .minHeight {min-height: 30px !important;}
+@media screen and (min-width:320px)  { 
+	body {font-size:13px }
+}
+@media screen and (min-width:480px)  { 
+	body {font-size:14px}
+}
+@media screen and (min-width:600px)  { 
+	body {font-size:14px}
+}
+@media screen and (min-width:801px)  { 
+	body {font-size:14px}
+}
+@media screen and (min-width:1025px) { 
+	body {font-size:14px}
+}
+@media screen and (min-width:1281px) { 
+	body {font-size:14px}
+}
